--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -27,9 +27,9 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20.12.0
-          cache: 'yarn'
-      - run: yarn
-      - run: yarn lint
+          cache: 'npm i'
+      - run: npm i
+      - run: npm run lint
 
   build:
     needs: [eslint]
@@ -45,9 +45,9 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20.11.0
-          cache: 'yarn'
-      - run: yarn
-      - run: yarn build
+          cache: 'npm i'
+      - run: npm i
+      - run: npm run build
       - name: Setup Pages
         uses: actions/configure-pages@v4
       - name: Upload artifact
